# CppSDLBoilerplate

./: .gitignore  CMakeLists.txt  README.md
helpers/: helper.h
helpers/Common/: Uncopiable.h
helpers/Game/: myGame.cpp  myGame.h
helpers/Game/State/: StateGame.cpp  StateGame.h
helpers/Input/: SimpleInputManager.h
helpers/SDL/: SDLManager.cpp  SDLManager.h  SDLTexture.h
project/: main.cpp
project/Sources/: definitions.cpp
